# surface_mesh_from_MRI

./: CMakeLists.txt  README.md  mesh_from_nifti.cpp  test_mesh_3D_gray_image.cpp
example/: example.csv
